@@ -3,6 +3,7 @@ Version: 1.3.23
 Date: ????
   Bugfixes:
     - Fixed Reset button not working properly for remote presets when loading a save file without mod changes.
+    - Fixed consumption milestones not being backfilled properly.
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.22
